<resources>
    <string name="app_name">GIT_budgetManagementApp</string>
    <string name="your_name">Your Name</string>
    <string name="enter_name">Enter name</string>
    <string name="change_name">Change Name</string>
    <string name="_0_0">0.0</string>
    <string name="enter_budget">Enter budget</string>
    <string name="change_budget">Change budget</string>
    <string name="expense_name">Expense Name:</string>
    <string name="expense_cost">Expense Cost:</string>
    <string name="expense_type">Expense Type:</string>
    <string name="name">Name</string>
    <string name="type_food_rent_etc">Type (Food, rent, etc.)</string>
    <string name="cost">Cost</string>
    <string name="add_expense">Add Expense</string>
</resources>
